--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -1,39 +1,42 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>Hello World! &larr; </title>
-   <meta name="author" content="Dong Bo" />
+   <title>{{ page.title }} &larr; {{ page.top }}</title>
+   <meta name="author" content="{{ site.author.name }}" />
 
-   <link rel="start" href="/" />
+   <link rel="start" href="{{ HOME_PATH }}" />
 
+	{% if page.keywords %}
+	<meta name="keywords" content="{{ page.keywords }}">
+	{% endif %}
 	
-	
-	
-  	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/dbkaiser" title="RSS feed" />
-	
-	
+	{% if site.author.feedburner %}
+  	<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/{{ site.author.feedburner }}" title="RSS feed" />
+	{% endif %}
+	{% if page.feed %}
+  	<link rel="alternate" type="application/atom+xml" href="{{ page.feed }}" title="RSS feed" />
+	{% endif %}
 
    <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/assets/themes/mark-reid/css/syntax.css" type="text/css" />
+   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/syntax.css" type="text/css" />
 
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/assets/themes/mark-reid/css/screen.css" type="text/css" />
+   <link rel="stylesheet" href="{{ ASSET_PATH }}/css/screen.css" type="text/css" />
 
 </head>
-<body id="">
+<body id="{{ page.section }}">
 <div id="site">
   
   <div id="header">
     <h1>
-    	<a href="/" title="KaiTu">KaiTu</a>
-    	<span class="byline">&larr; <a href="/">Dong Bo</a></span>
+    	<a href="{{ HOME_PATH }}" title="{{ site.title }}">{{ site.title }}</a>
+    	<span class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></span>
     </h1>
     <ul class="nav">
-      <li><a class="home" href="/">Home</a></li>
+      <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
       <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
@@ -41,22 +44,12 @@
     </ul>
   </div>
 
-  
-<div id="page">
-	
-<h1 class="emphnext">Hello World!</h1>
-<h1 id='hoyo'>HOYO</h1>
-
-<p><a href='http://127.0.0.1:4000'>Halo this world</a></p>
-
-</div><!-- End Page -->
-
-
+  {{ content }}
   
   <div id="footer">
   	<address>
   		<span class="copyright">
-  			Content by <a href="/info/site.html">Dong Bo</a>. Design by 
+  			Content by <a href="/info/site.html">{{ site.author.name }}</a>. Design by 
   			<a href="http://mark.reid.name/">Mark Reid</a>
   			<br/>
   			(<a rel="licence" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Some rights reserved</a>)			
@@ -79,7 +72,6 @@
 <script type="text/javascript" src="http://static.ie6update.com/hosted/ie6update/ie6update.js"></script>
 <![endif]-->
 
-  
+  {% include JB/analytics %}
 </body>
 </html>
-
